cmake_minimum_required(VERSION 3.5.0)
SET(CMAKE_CXX_STANDARD 11)

PROJECT(rrt)
FIND_PACKAGE(octomap REQUIRED)
INCLUDE_DIRECTORIES(
include
)

AUX_SOURCE_DIRECTORY(src DIR_SRCS)

SET(TEST_MATH
${DIR_SRCS}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_MATH})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} octomap)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} octomath)
